# python-grundkurs-2685000

./: .gitignore  README.md  TinosBeispiel.py  TinosBsp.py  TinosExample.py  pyproject.toml  script.py  script_gc.py  script_loesung.py  script_ref_counter.py  setup.py
scripts/: beispiel_script.py  julias_aufgaben.py  julias_skript.py  skript_accounts.py  taschen_rechner.py
src/aufgaben_package/: personen.py  rechen_operation.py
src/bank_account/: account.py  jugend_account.py
src/example_package/: rechen_operationen.py
src/genai_beispiele/: funktionen_module.py  taschen_rechner.py
src/python_grund_kurs/: aufgaben.py  kategorien.py
src/python_grund_kurs/utils/: sortieren.py
tests/: test_account.py  test_aufgaben.py  test_einfach.py  test_funktionen_module.py  test_jugend_account.py  test_kategorien_manager.py  test_personen.py  test_rechen_operation.py  test_rechen_operationen.py  test_rechen_operationen_gen_ai.py  test_sortieren.py  test_taschen_rechner.py
