
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
build-backend-honors = ["build_editable", "build"]

[project]
name = "genai_beispiele"
version = "1.0.0"
description = "Übung für GenAi"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pytest==8.3.2"
]
license = { text = "LinkedIn Learning Exercise Files License" }
authors = [
    { name = "Julia Imlauer", email = "info@linkedinlearning.com" }
]
keywords = ["python", "grundkurs", "linkedinlearning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LinkedIn Learning Exercise Files License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/LinkedInLearning/python-grundkurs-2685000"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE"]


# 'Installation' mittels pyproject.toml
# pip install . 
